[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://CameraPivot.gd" type="Script" id=2]
[ext_resource path="res://addons/noise-textures/worley-viewport.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI.gd" type="Script" id=4]

[sub_resource type="PlaneMesh" id=1]

size = Vector2( 128, 128 )
subdivide_width = 100
subdivide_depth = 100

[sub_resource type="Shader" id=2]

code = "shader_type spatial;

uniform sampler2D heightmap;

float height(vec2 pos) {
	vec4 hm = texture(heightmap, pos);
	
	return -20.0 * (hm.r + (0.5 * hm.g) + (0.25 * hm.b));
}

void vertex() {
	float y1 = height(UV);
	float y2 = height(UV + vec2(0.01, 0.0));
	float y3 = height(UV + vec2(0.0, 0.01));
	
	VERTEX.y = y1;
	NORMAL = normalize(vec3(y2-y1, 0.04, y3-y1));
}

void fragment() {
	ALBEDO = texture(heightmap, UV).rgb;
}
"

[sub_resource type="ViewportTexture" id=3]

resource_local_to_scene = true
flags = 4
viewport_path = NodePath("WorleyViewport")

[sub_resource type="ShaderMaterial" id=4]

resource_local_to_scene = true
render_priority = 0
shader = SubResource( 2 )
shader_param/heightmap = SubResource( 3 )
_sections_unfolded = [ "Resource", "shader_param" ]

[sub_resource type="ViewportTexture" id=5]

resource_local_to_scene = true
flags = 4
viewport_path = NodePath("WorleyViewport")

[node name="Main" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="CameraPivot" type="Position3D" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, 0.819152, 0.573576, 0, -0.573576, 0.819152, 0, 0, 0 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera" parent="CameraPivot" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="HeightMapExample" type="MeshInstance" parent="." index="1"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 4 )
_sections_unfolded = [ "material" ]

[node name="DirectionalLight" type="DirectionalLight" parent="." index="2"]

transform = Transform( -0.339313, -0.845123, -0.413078, -0.693996, -0.071532, 0.716416, -0.635008, 0.529764, -0.562241, 0, 21.8611, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0

[node name="WorleyViewport" parent="." index="3" instance=ExtResource( 3 )]

texture_size = Vector3( 256, 256, 1 )
number_of_points = 15

[node name="UI" type="Control" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Size Flags" ]
worley = NodePath("../WorleyViewport")

[node name="Worley_Red" type="TextureRect" parent="UI" index="0"]

modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 5 )
stretch_mode = 0
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[node name="Worley_Green" type="TextureRect" parent="UI" index="1"]

modulate = Color( 0, 1, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_right = 512.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 5 )
stretch_mode = 0
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[node name="Worley_Blue" type="TextureRect" parent="UI" index="2"]

modulate = Color( 0, 0, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_right = 768.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 5 )
stretch_mode = 0
_sections_unfolded = [ "Material", "Rect", "Size Flags", "Visibility" ]

[node name="Worley_MaxDistance" type="HSlider" parent="UI" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 775.0
margin_top = 7.0
margin_right = 1014.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.1
max_value = 1.0
step = 0.05
page = 0.0
value = 0.1
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Worley_NumberOfPoints" type="HSlider" parent="UI" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 775.0
margin_top = 27.0
margin_right = 1014.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 1.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Rect" ]

[connection signal="value_changed" from="UI/Worley_MaxDistance" to="UI" method="_on_Worley_MaxDistance_value_changed"]

[connection signal="value_changed" from="UI/Worley_NumberOfPoints" to="UI" method="_on_Worley_NumberOfPoints_value_changed"]


